Some lost changes committed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -48,11 +48,29 @@ application.langs="en"
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=ERROR
+logger.root=DEBUG
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
 
+
+
+# ****************************************** #
+# *** ReactiveMongo Plugin configuration *** #
+# ****************************************** #
+
+# Simple configuration (by URI)
+mongodb.uri = "mongodb://localhost:27017/nxc"
+
+# URI + Authentication
+# mongodb.uri = "mongodb://jack:jack@localhost:27017/toto"
+
+# Legacy configuration (prefer URI)
+# mongodb.servers = ["localhost:27017"]
+# mongodb.db = "databasename"
+
+# If you want to turn on logging for ReactiveMongo, uncomment and customize this line
+logger.reactivemongo=DEBUG
